--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/x-data-grid": "^8.26.0",
     "axios": "^1.13.4",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
